--- a/StudentApp/Views/Home/Add_Student.cshtml
+++ b/StudentApp/Views/Home/Add_Student.cshtml
@@ -34,6 +34,7 @@
         @Html.LabelFor(model => model.Gender.Name, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.GenderId, ViewBag.Genders as SelectList, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.ValidationMessageFor(model => model.Gender.Name, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -41,6 +42,7 @@
         @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.GroupId, ViewBag.Groups as SelectList, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.ValidationMessageFor(model => model.Group.Name, "", new { @class = "text-danger" })
         </div>
     </div>
 
