--- a/StudentApp/Views/Home/Index.cshtml
+++ b/StudentApp/Views/Home/Index.cshtml
@@ -29,5 +29,10 @@
                 @Html.ActionLink("Add Subject", "Add_Subject")
             </p>
         </div>
-        
+        <div class="col-md-4">
+            <p>
+                @Html.ActionLink("Students", "Students")
+            </p>
+        </div>
+
     </div>
