--- a/StudentApp/Views/Home/Student_List.cshtml
+++ b/StudentApp/Views/Home/Student_List.cshtml
@@ -1,59 +1,38 @@
-﻿@model IEnumerable<StudentApp.Models.Student>
-
+﻿@model StudentApp.Models.IndexViewModel
+@using StudentApp.Helpers
 @{
     ViewBag.Title = "Student_List";
 }
 
-<h2>Student_List</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Students</h2>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Age)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Gender)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Group.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Group.Facultat)
-        </th>
+        <td>Имя</td>
+        <td>Возраст</td>
+        <td>Пол</td>
+        <td>Группа</td>
+        <td>Факультет</td>
 
-        <th></th>
     </tr>
-
-@foreach (var item in Model) {
+    @foreach (var item in Model.Students)
+    {
 <tr>
+    <td>@item.Name</td>
+    <td>@item.Age</td>
+    <td>@item.Gender.Name</td>
+    <td>@item.Group.Name</td>
+    <td>@item.Group.Facultat.Name</td>
     <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Age)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Gender.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Group.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Group.Facultat.Name)
-    </td>
-
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Student's Points", "Student_Points", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+        @Html.ActionLink("Details", "Details", new {  id=item.Id  }) |
+        @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
     </td>
 </tr>
-}
-
+    }
 </table>
+<br />
+<div class="btn-group">
+    @Html.PageLinks(Model.PageInfo, x => Url.Action("Student_List", new { page = x }))
+</div>
+
+
